# smartdev09_pr-reviewer

./: .gitignore  COMMANDS.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_SETUP.md  README.md  SETUP_GUIDE.md  action.yml  package.json  pyproject.toml  setup-workflow.yml  test-local.sh  tsconfig.json
.github/workflows/: comment-triggered.yml  example.yml
docs/: comment-trigger-flow.md
python/: requirements.txt  test_token_manager.py  token_manager.py
src/: formatters.ts  main.ts  python_bridge.ts  types.ts
src/ai/: provider.ts
src/engines/: quality.ts  security.ts  suggestions.ts
src/github/: client.ts
src/prompts/: quality.ts  security.ts  suggestions.ts
