[project]
name = "pr-reviewer-token-manager"
version = "0.1.0"
description = "Token management module for PR Reviewer"
requires-python = ">=3.12"
dependencies = [
    "tiktoken>=0.7.0",
    "GitPython>=3.1.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
